--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SmokeInfoActivity"></activity>
-        <activity android:name=".UserRegisterActivity" />
-        <activity android:name=".IntroActivity">
+        <activity android:name=".view.smokeinfo.SmokeInfoActivity"></activity>
+        <activity android:name=".view.register.UserRegisterActivity" />
+        <activity android:name=".view.intro.IntroActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
