--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.smokeinfo.SmokeInfoActivity"></activity>
+        <activity android:name=".view.main.MainActivity"></activity>
+        <activity android:name=".view.smokeinfo.SmokeInfoActivity" />
         <activity android:name=".view.register.UserRegisterActivity" />
         <activity android:name=".view.intro.IntroActivity">
             <intent-filter>
